stop styling scrollbar width

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -21,24 +21,16 @@
 html {
     --scrollbar-color-track: rgb(var(--theme-secondary));
     --scrollbar-color-thumb: rgb(var(--theme-accent));
-    --scrollbar-width: auto;
-    --scrollbar-width-legacy: 10px;
 
     @supports (scrollbar-width: auto) {
         scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
-        scrollbar-width: var(--scrollbar-width);
     }
     @supports selector(::-webkit-scrollbar) {
         .-webkit-scrollbar-thumb {
             background: var(--scrollbar-color-thumb);
-            border-radius: 5px;
         }
         .-webkit-scrollbar-track {
             background: var(--scrollbar-color-track);
-        }
-        .-webkit-scrollbar {
-            max-width: var(--scrollbar-width-legacy);
-            max-height: var(--scrollbar-width-legacy);
         }
     }
 }
